--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -3,7 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/darker_gray"
+    android:background="#ffffff"
+    android:elevation="2dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     >
     <TextView
         android:layout_width="match_parent"
